# n-mgram

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  how-to-update.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: sync-android-icons.mjs
src/: app.test.tsx  app.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json  windows-fullscreen.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src/api/: client.test.ts  client.ts  page-image.test.ts  schemas.test.ts
src/components/: advanced-search.test.tsx  advanced-search.tsx  app-updater-panel.test.tsx  app-updater-panel.tsx  detail-view.test.tsx  detail-view.tsx  favorites-panel.test.tsx  favorites-panel.tsx  icons.tsx  library-navigation.test.tsx  library-navigation.tsx  manga-card.tsx  page-image.test.tsx  page-image.tsx  reader-pull-refresh.tsx  reader-spread.test.ts  reader-spread.ts  reader.test.tsx  reader.tsx  reading-dashboard.test.tsx  reading-dashboard.tsx
src/hooks/: use-discover-collections.ts
src/search/: manga-search.test.ts  manga-search.ts
src/services/: app-updater.test.ts  app-updater.ts  chapter-edge-prefetch.test.ts  chapter-edge-prefetch.ts  favorite-catalog-loader.test.ts  favorite-catalog-loader.ts  history-update-checker.test.ts  history-update-checker.ts  page-image-cache.test.ts  page-image-cache.ts  reader-prefetch.test.ts  reader-prefetch.ts
(+4 files in other folders)
